Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25445

tst_QTcpServer autotest broken on Mac

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.0.0
    • 5.0.0
    • Network: Sockets
    • None
    • macOS

      While attempting to re-enable networks tests on Mac, the following failure was observed on both developer and non-developer builds on Mac OS X 10.7. Further CI results are needed to increase confidence that this failure is stable (in which case it could be marked with QEXPECT_FAIL).

      4/21/12 5:53:32 AM EST: Testing tst_QTcpServer
      4/21/12 5:53:47 AM EST: FAIL!  : tst_QTcpServer::serverAddress(WithoutProxy:Any) Compared values are not the same
      4/21/12 5:53:47 AM EST:    Loc: [../tst_qtcpserver.cpp(839)]
      4/21/12 5:53:47 AM EST: Totals: 73 passed, 1 failed, 8 skipped
      4/21/12 5:53:47 AM EST: QtQA::App::TestRunner: test failed, running again to see if it is flaky...
      4/21/12 5:53:47 AM EST: Testing tst_QTcpServer
      4/21/12 5:54:04 AM EST: FAIL!  : tst_QTcpServer::serverAddress(WithoutProxy:Any) Compared values are not the same
      4/21/12 5:54:04 AM EST:    Loc: [../tst_qtcpserver.cpp(839)]
      4/21/12 5:54:04 AM EST: Totals: 73 passed, 1 failed, 8 skipped
      4/21/12 5:54:04 AM EST: QtQA::App::TestRunner: test failure could be reproduced twice consecutively
      

        For Gerrit Dashboard: QTBUG-25445
        # Subject Branch Project Status CR V

            shkearns Shane Kearns
            jasmcdon Jason McDonald (Closed Nokia Identity. Please assign to "macadder" instead) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes